--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,16 @@
+* {
+    border: 0px;
+    padding: 0px;
+    margin: 0px;
+}
+
 #viewPort {
     width: 100%;
     height: 100%;
-    color: red;
-    position: relative;
+    position: absolute;
+    background-color: white;
+}
+
+#jsDisabled {
+    position: absolute;
 }
